--- a/oppo-admin/vue-element-admin/package.json
+++ b/oppo-admin/vue-element-admin/package.json
@@ -10,9 +10,15 @@
     "axios": "^0.26.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.4.5",
+    "express": "^4.17.3",
+    "multer": "^1.4.4",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.15",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "wangeditor": "^4.7.12",
+    "webpack": "^5.70.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
