--- a/oppo-admin/vue-element-admin/package.json
+++ b/oppo-admin/vue-element-admin/package.json
@@ -11,9 +11,12 @@
     "core-js": "^3.8.3",
     "element-ui": "^2.4.5",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
+    "querystring": "^0.2.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
@@ -28,6 +31,8 @@
     "babel-plugin-component": "^1.1.1",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
+    "node-sass": "^7.0.1",
+    "sass-loader": "^12.6.0",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.14"
   },
