--- a/oppo-admin/vue-element-admin/package.json
+++ b/oppo-admin/vue-element-admin/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "less": "^3.0.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15",
@@ -20,21 +21,20 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "wangeditor": "^4.7.12",
-    "webpack": "^5.70.0"
+    "wangeditor": "^4.7.12"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^4.5.16",
     "babel-plugin-component": "^1.1.1",
-    "less": "^4.0.0",
-    "less-loader": "^8.0.0",
+    "less-loader": "^7.3.0",
     "node-sass": "^7.0.1",
     "sass-loader": "^12.6.0",
     "vue-cli-plugin-element": "~1.0.1",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.0.0"
   },
   "browserslist": [
     "> 1%",
