--- a/oppo-web-ui/oppo-web-vue/package.json
+++ b/oppo-web-ui/oppo-web-vue/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^3.4.1",
     "core-js": "^3.6.5",
+    "element-ui": "^2.4.5",
     "jquery": "^3.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -20,8 +21,10 @@
     "@vue/cli-plugin-router": "~4.5.17",
     "@vue/cli-plugin-vuex": "~4.5.17",
     "@vue/cli-service": "~4.5.17",
+    "babel-plugin-component": "^1.1.1",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
