--- a/oppo-web-ui/oppo-web-vue/package.json
+++ b/oppo-web-ui/oppo-web-vue/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "^3.4.1",
+    "colorthief": "^2.3.2",
     "core-js": "^3.6.5",
     "element-ui": "^2.4.5",
     "jquery": "^3.6.0",
+    "textcolor": "^1.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
